features content added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/architect.css">
 </head>
 <body>
+    <!-- header start: -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architect</h3>
@@ -24,10 +25,30 @@
                 <button class="btn-primary">Explore More</button>
             </div>           
             <img src="images/download (6).jpg" alt="" srcset="">  
-        </div>  
-       
+        </div>      
     </header>
+    <!-- header end -->
 
-    
+    <main>
+        <!-- teams feature section start: -->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/download (1).jpg" alt="" srcset="">
+                <img src="images/download (2).jpg" alt="" srcset="">
+                <img src="images/download (3).jpg" alt="" srcset="">
+                <img src="images/download (4).jpg" alt="" srcset="">
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="quick-list">Quick list</span> <span>of Our</span> <span class="text-features">Features</span></h3>
+                <p class="teams-description">How does an architecture company work? An architecture firm might be organized as a partnership, a limited liability partnership, a corporation, or as sole practitioners. The size and scope of an architecture firm can vary depending on the type and number of projects it undertakes, the market demand, and the reputation and experience of its staff.</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
+  
 </body>
 </html>
