teams section responsivenss done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects</h1>
-                <p class="banner-description">An architect is a person who plans, designs and oversees the construction of buildings. To practice architecture means to provide services in connection with the design of buildings and the space within the site surrounding the buildings that have human occupancy or use as their principal purpose.</p>
+                <p class="text-light-gray">An architect is a person who plans, designs and oversees the construction of buildings. To practice architecture means to provide services in connection with the design of buildings and the space within the site surrounding the buildings that have human occupancy or use as their principal purpose.</p>
                 <button class="btn-primary">Explore More</button>
             </div>           
             <img src="images/download (6).jpg" alt="" srcset="">  
@@ -39,8 +39,8 @@
                 <img src="images/download (4).jpg" alt="" srcset="">
             </div>
             <div class="teams-content">
-                <h3 class="teams-title"><span class="quick-list">Quick list</span> <span>of Our</span> <span class="text-features">Features</span></h3>
-                <p class="teams-description">How does an architecture company work? An architecture firm might be organized as a partnership, a limited liability partnership, a corporation, or as sole practitioners. The size and scope of an architecture firm can vary depending on the type and number of projects it undertakes, the market demand, and the reputation and experience of its staff.</p>
+                <h3 class="teams-title"><span class="quick-list text-light-gray">Quick list</span> <span>of Our</span> <span class="text-features">Features</span></h3>
+                <p class="text-light-gray">How does an architecture company work? An architecture firm might be organized as a partnership, a limited liability partnership, a corporation, or as sole practitioners. The size and scope of an architecture firm can vary depending on the type and number of projects it undertakes, the market demand, and the reputation and experience of its staff.</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
