doing shared css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- header start: -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architect</h3>
+            <h3 class="section-title">G3 Architect</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -30,7 +30,7 @@
     <!-- header end -->
 
     <main>
-        <!-- teams feature section start: -->
+        <!-- teams section start: -->
         <section class="teams-container">
             <div class="teams-img-container">
                 <img src="images/download (1).jpg" alt="" srcset="">
@@ -44,6 +44,18 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+
+        <!-- features section start: -->
+        <section class="features">
+
+        </section>
+        <!-- facts section: -->
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">What makes a good architectural firm?
+                Good architects listen carefully to a client's needs. We need to understand what they are trying to accomplish with the physical building where they will work. </p>
+        </section>
+
 
     </main>
     <footer>
