images added and positioned in the facts section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,31 @@
         <section class="facts">
             <h3 class="section-title">Some Facts</h3>
             <p class="text-light-gray">What makes a good architectural firm?
-                Good architects listen carefully to a client's needs. We need to understand what they are trying to accomplish with the physical building where they will work. </p>
+            Good architects listen carefully to a client's needs. We need to understand what they are trying to accomplish with the physical building where they will work.</p>
+            <div class="facts-card-container">
+                <!-- .card*4>img+h2.card-stats+p.card-title.text-light-gray -->
+                <div class="card">
+                    <img src="images/award.jpg" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title text-light-gray">Award Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/done.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title text-light-gray">Projects Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/client.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title text-light-gray">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/email.jpg" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title text-light-gray">Email Send</p>
+                </div>
+            </div>
+
         </section>
 
 
