added the sponsors section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <section class="features">
 
         </section>
+
         <!-- facts section: -->
         <section class="facts">
             <h3 class="section-title">Some Facts</h3>
@@ -76,6 +77,17 @@
                     <h2 class="card-stats">22578</h2>
                     <p class="card-title text-light-gray">Email Send</p>
                 </div>
+            </div>
+        </section>
+        <section class="sponsors">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="text-light-gray">A business sponsorship is an organization's support of an event or activity, like a nonprofit, organization, group, trade show or local sports team, which usually comes in the form of a financial contribution.</p>
+            <div class="sponsors-img-container">
+                <img src="images/sponsor1.jpg" alt="">
+                <img src="images/sponsor2.png" alt="">
+                <img src="images/sponsor3.png" alt="">
+                <img src="images/sponsor4.jpg" alt="">
+                <img src="images/sponsor5.jpg" alt="">
             </div>
 
         </section>
