features section elements created

--- a/index.html
+++ b/index.html
@@ -47,6 +47,37 @@
 
         <!-- features section start: -->
         <section class="features">
+            <div class="feature-content">
+                <h3 class="section-title">Features you will <br>love & enjoy</h3>
+                <p class="text-light-gray">Good architects listen carefully to a client’s needs. We need to understand what they are trying to accomplish with the physical building where they will work.</p>
+                <div class="card">
+                    <h4>Desktop & Mobile Version</h4> 
+                    <p class="text-light-gray">This is a sort of a trust-your-gut situation. It doesn’t take many conversations to figure out if you share values. A firm can have its core values posted all over its website and marketing materials, but you shouldn’t leave a meeting with a group of people you might be working with for several months thinking, “They didn’t hear what we were saying.”
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Desktop & Mobile Version</h4> 
+                    <p class="text-light-gray">This is a sort of a trust-your-gut situation. It doesn’t take many conversations to figure out if you share values. A firm can have its core values posted all over its website and marketing materials, but you shouldn’t leave a meeting with a group of people you might be working with for several months thinking, “They didn’t hear what we were saying.”
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Desktop & Mobile Version</h4> 
+                    <p class="text-light-gray">This is a sort of a trust-your-gut situation. It doesn’t take many conversations to figure out if you share values. A firm can have its core values posted all over its website and marketing materials, but you shouldn’t leave a meeting with a group of people you might be working with for several months thinking, “They didn’t hear what we were saying.”
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Desktop & Mobile Version</h4> 
+                    <p class="text-light-gray">This is a sort of a trust-your-gut situation. It doesn’t take many conversations to figure out if you share values. A firm can have its core values posted all over its website and marketing materials, but you shouldn’t leave a meeting with a group of people you might be working with for several months thinking, “They didn’t hear what we were saying.”
+                    </p>
+                </div>
+            </div>
+            <div class="feature-img">
+                <img src="images/tiger(h).jpg" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+ years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
 
         </section>
 
@@ -79,6 +110,8 @@
                 </div>
             </div>
         </section>
+        
+        <!-- sponsors section: -->
         <section class="sponsors">
             <h3 class="section-title">Our Sponsors</h3>
             <p class="text-light-gray">A business sponsorship is an organization's support of an event or activity, like a nonprofit, organization, group, trade show or local sports team, which usually comes in the form of a financial contribution.</p>
@@ -89,9 +122,7 @@
                 <img src="images/sponsor4.jpg" alt="">
                 <img src="images/sponsor5.jpg" alt="">
             </div>
-
         </section>
-
 
     </main>
     <footer>
