footer section done

--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
 
     </main>
     <footer>
+        <section class="footer-container">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </section>
 
     </footer>
   
